test/regression/idl/compiler/fail/Float2.idl


module org
{
   module jacorb
   {
      module test
      {
         module idl
         {
            module Floats
            {
                // incorrect, must not be accepted:
                const double cd12= 14e;
            };
         };
      };
   };
};
